--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@supabase/supabase-js": "^2.39.7",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-latex-next": "^3.0.0",
     "react-router-dom": "^6.22.2",
+    "recharts": "^2.15.2",
     "sonner": "^2.0.2",
     "styled-components": "^6.1.16",
     "zustand": "^4.5.2"
